# fakeyou-api

./: CHANGELOG.md  Cargo.toml  README.md
examples/: categories.rs  tts.rs  voices.rs
src/: error.rs  fakeyou.rs  lib.rs
src/apis/: category.rs  mod.rs  tts.rs  voice.rs  voices.rs
src/util/: mod.rs  tts.rs
