[package]
name = "fakeyou-api"
version = "0.1.3"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/fakeyou-api"
description = "A very simple Rust library for FakeYou API."
keywords = ["fakeyou-api", "fakeyou", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
ureq = { version = "2.7.1", features = ["json", "tls"] }
uuid = { version = "1.4.0", features = ["v4"] }

[[example]]
name = "tts"
path = "examples/tts.rs"
