[package]
name = "fakeyou-api"
version = "0.2.1"
authors = ["jercan_alex27@yahoo.com"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/alexjercan/fakeyou-api"
description = "A very simple Rust library for FakeYou API."
keywords = ["fakeyou-api", "fakeyou", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["json", "blocking", "default-tls", "native-tls"], default-features = false }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.43"
uuid = { version = "1.4.0", features = ["v4"] }

[[example]]
name = "tts"
path = "examples/tts.rs"

[[example]]
name = "voices"
path = "examples/voices.rs"

[[example]]
name = "categories"
path = "examples/categories.rs"
